Fix post spacing

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -10,6 +10,7 @@
 
 /* append your custom style below */
 
+main article,
 #post-wrapper,
 .post-content {
   blockquote {
